--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CatPhotoApp</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/ViktoriiaBaskina/MyProject/blob/main/styles.css">
   </head>
   <body>
     <main>
