--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>CatPhotoApp</title>
     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="styles1.css">
   </head>
   <body>
     <main>
