--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1 class="title">CatPhotoApp</h1>
-      <section class="sec1">
+      <section class="section1">
         <h2>Cat Photos</h2>
         <!-- TODO: Add link to cat photos -->
         <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
