--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       </section>
       <section class="section2">
         <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
+        <div class="love">
+          <h3>Things cats love:</h3>
         <ul>
           <li>cat nip</li>
           <li>laser pointers</li>
@@ -27,6 +28,8 @@
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
           <figcaption>Cats <em>love</em> lasagna.</figcaption>  
         </figure>
+        </div>
+        <div class="hate">
         <h3>Top 3 things cats hate:</h3>
         <ol>
           <li>flea treatment</li>
@@ -37,6 +40,7 @@
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
           <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
         </figure>
+          </div>
       </section>
       <section>
         <h2>Cat Form</h2>
