--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="section2">
         <h2>Cat Lists</h2>
         <div class="love">
-          <h3>Things cats love:</h3>
+          <h3>Top 3 things cats love:</h3>
         <ul>
           <li>cat nip</li>
           <li>laser pointers</li>
