--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </figure>
           </div>
       </section>
-      <section>
+      <section class="section3">
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
           <fieldset>
