--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
             <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
           </fieldset>
+          <div class='button-container'>
           <input id="catphoto" type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">Submit</button>
+          <button class="button" type="submit">Submit</button>
+          </div>
         </form>
       </section>
     </main>
